deploy-autoscaling.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegrambot-deployment
  labels:
    app : telegrambot-application

# Указываем какими подами(Labels) будет управлять деплой
spec:
  replicas: 2
  selector:
    matchLabels:
      owner: vlad

# Создаём под
  template:
    metadata:
      labels:
        owner: vlad

    spec:
      containers:
        - name: telegrambot
          image: shpilevoy/telegram_bot:v01
          command: ["sh", "-c", "cd /app/Bot2/ && python3 Main.py"]
