deployment-autoscaling.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  labels:
    owner: vlad

# Указываем какими подами(Labels) будет управлять деплой
spec:
  replicas: 3
  selector:
    matchLabels:
      owner: vlad

# Создаём под
  template:
    metadata:
      labels:
        owner: vlad

    spec:
      containers:
        - name: nginx-test
          image: containous/whoami 
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    owner: vlad    # Selecting PODS with those Labels
  ports:
    - name      : app-listener
      protocol  : TCP
      port      : 80  # Port on Load Balancer
      targetPort: 80  # Port on POD
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: vlad.loc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-app-service
            port:
              number: 80
